# AERP

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_macro_indicators.py  0003_insider_and_cik.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  logging.py  ratelimit.py  security.py
backend/app/db/: seed.py  session.py
backend/app/engines/: common.py  scoring_util.py
backend/app/ingestion/: insider.py  (+10 more)
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  fake_yahoo.py  fundamentals_data.py  mock_http.py  test_auth.py  test_cli.py  test_company.py  test_composite_dimensions.py  test_composite_engine.py  test_composite_signals.py  test_forex_engine.py  test_fundamental_engine.py  test_fundamental_health.py  test_fundamental_ratios.py  test_fundamental_scoring.py  test_health.py  test_insider.py  test_macro.py  test_markets.py  test_news.py  test_patterns_candlestick.py  test_patterns_chart.py  test_patterns_engine.py  test_patterns_harmonic.py  test_pipeline.py  test_provider_yahoo.py  test_providers.py  test_psx_csv.py  test_psx_insider.py  test_psx_market.py  test_psx_site.py  test_ratelimit.py  test_registry.py  test_screener.py  test_securities.py  test_stream.py  test_technical_engine.py  test_technical_indicators.py  test_technical_scoring.py  test_us_universe.py  (+1 more)
(+564 files in other folders)
